# MindIE-Motor

./: .clang-format  .gitignore  .gitmodules  LICENSE  OWNERS  README.md  version.info
.gitcode/: PULL_REQUEST_TEMPLATE.md
ci/: bep_env.conf  build.sh  build_3rdparty.sh  build_benchmark.sh  build_client.sh  create_package.sh  dependency.json  download_3rdparty.py  patch_grpc_and_dependency.sh  prepare_3rdparty_dependency.sh
ci/install/: install.sh  uninstall.sh
docs/en/: readme.md
docs/zh/: legal_notice.md  license.md  security.md
docs/zh/Developer_Guide/: code_of_conduct.md  contributing.md  test.md
docs/zh/User_Guide/: FAQ.md  quick_start.md  service_oriented_optimization_tool.md  安装方式总览.md
docs/zh/User_Guide/ClLUSTER_MANAGEMENT_COMPONENT/: controller.md  coordinator.md  deployer.md  general_comments.md  log_configuration.md
docs/zh/User_Guide/SERVICE_DEPLOYMENT/: environment_preparation.md  pd_separation_service_deployment.md  preparing_mindie_image.md  single_machine_service_deployment.md
docs/zh/User_Guide/SERVICE_ORIENTED_INTERFACE/: description.md  intra_cluster_communication_interface.md  optical_user_to_network_interface.md
mindie_service/client/: README.md  requirements.txt  setup.py
mindie_service/management_service/: CMakeLists.txt  README.md  build.sh  one_key_build.sh
mindie_service/management_service/adapter/: __init__.py  requirement.txt  setup.py
mindie_service/management_service/common/digs/: parse_json.cpp
mindie_service/management_service/common/http_server/: HttpServer.cpp
mindie_service/management_service/common/leader_judge/: KmcDecryptor.cpp  LeaderAgent.cpp
mindie_service/management_service/common/securityutils/: SecurityUtils.cpp
mindie_service/management_service/config/: infer_server.json  ms_controller.json  ms_coordinator.json  ms_server.json  node_manager.json
mindie_service/management_service/controller/: CMakeLists.txt
mindie_service/management_service/controller/cluster_status/: NodeStatus.cpp
mindie_service/management_service/controller/constant/: ControllerConfig.cpp  ControllerConfig.h
mindie_service/management_service/controller/fault_manager/: FaultManager.cpp  FaultManager.h
mindie_service/management_service/controller/json_file_loader/: JsonFileLoader.cpp
mindie_service/management_service/controller/node_manager_sender/: NodeManagerRequestSender.cpp
mindie_service/management_service/controller/node_scheduler/: NodeScheduler.cpp
mindie_service/management_service/controller/request_handler/: CCAERequestHandler.cpp  CoordinatorBackupHandler.cpp  ServerRequestHandler.cpp  ServerRequestHandler.h
mindie_service/management_service/controller/status_updater/: StatusUpdater.cpp
mindie_service/management_service/coordinator/: CMakeLists.txt  Coordinator.cpp
mindie_service/management_service/coordinator/cluster_monitor/: ClusterNodes.cpp
mindie_service/management_service/coordinator/configure/: Configure.cpp
mindie_service/management_service/coordinator/controller_listener/: ControllerListener.cpp
mindie_service/management_service/coordinator/digs_scheduler/: digs_scheduler_impl.cpp
mindie_service/management_service/coordinator/request_listener/: RequestListener.cpp  RequestListener.h
mindie_service/management_service/coordinator/request_monitor/: ExceptionMonitor.cpp  ReqAgent.cpp  ReqAgent.h  RequestMgr.cpp  RequestMgr.h  (+1 more)
mindie_service/management_service/deployer/: CMakeLists.txt
mindie_service/management_service/deployer/infer_manager/: CrossNodeServer.cpp  KubeResourceDef.cpp  KubeResourceDef.h  ServerFactory.h  ServerManager.cpp  ServerManager.h  SingleNodeServer.cpp  StatusHandler.cpp  StatusHandler.h
mindie_service/management_service/deployer/msctl/: main.cpp
mindie_service/management_service/deployer/server/: main.cpp
mindie_service/management_service/node_health_management/: requirements.txt  setup.py
mindie_service/management_service/test/: test_mindms.sh
mindie_service/tools/benchmark/: README.md  human_eval_acc.sh  requirements.txt  setup.py
mindie_service/tools/simulator/: setup.py
mindie_service/utils/http_client_ctl/: CMakeLists.txt  main.cpp
tests/: README.md  install_env.sh  requirements.txt  run_all_tests.sh
tests/benchmark/: .coveragerc  __init__.py  module.py  run_test.sh  test_api.py  test_async_infer_engine.py  test_benchmarker.py  test_config.py  test_dataset_loader.py  test_logging.py  test_output.py  test_results.py  test_tokenizer.py  test_triton_client.py  test_visualization.py
tests/benchmark/config/: benchmark_config.json
tests/benchmark/mock_dataset/: mock_jsonl.jsonl
tests/benchmark/mockers/: mock_config.py  mock_file.py  mock_jsonl.py  mock_object.py  mock_path_check.py  mock_server.py
tests/benchmark/test_common/: test_file_utils.py  test_params_check.py  test_sampling.py  test_truthfulqa_eval.py
tests/benchmark/test_dataloaders/: test_ceval_loader.py  test_mmlu_loader.py  test_synthetic_loader.py
tests/mindie_client/: run_test.sh  test_client.py  test_input_requested_output.py  test_logging.py  test_mock.py  test_utils.py  unit_utils.py
tests/ms/: ms_test_util.sh  test_dt.sh
tests/ms/dt/: CMakeLists.txt
tests/ms/dt/deployer/: CMakeLists.txt
tests/ms/dt/deployer/infer_manager/: TestCrossNodeServer.cpp  TestKubeResource.cpp  TestMSServer.cpp  TestMSSingleServer.cpp  TestStatusHandler.cpp
tests/ms/dt/deployer/msctl/: TestMsctl.cpp
tests/ms/dt/deployer/util/: TestConfigParams.cpp  TestLogger.cpp  TestPathCheck.cpp
tests/ms/fuzz/: CMakeLists.txt
tests/ms/fuzz/deployer/: CMakeLists.txt  CommMock.cpp  CommMock.h  TestMindIEServer.cpp  TestMindIESingleServer.cpp
tests/ms/scripts/: replace_log_macro.py
tests/service_tools/simulator/: test_config_loader.py  test_dt.sh  test_inference_engine.py  test_parameter_solver.py  test_path_check.py  test_request_sender.py  test_utils.py
tests/sys_perf_test/: README.md  config.json  kill_all_service.sh  multi_node_config.json  output_performance.csv  sys_perf.py  sys_perf_multi_node.py  utils.py
(+301 files in other folders)
